# app/couples/router/relationship.go
@@ -10,6 +10,7 @@ func RelationshipRouter(v1 *gin.RouterGroup) {
 	{
 		v1.GET("/couple-detail/:id", relationship.CoupleDetailDisplay) //情侣关系展示1
 		v1.GET("/couple-detail", relationship.CoupleDetailDisplay2)    //情侣关系展示2
-		v1.POST("relationship", relationship.CoupleInvitation)         //情侣关系绑定                                                 //情侣关系绑定
+		v1.POST("relationship", relationship.CoupleInvitation)         //情侣关系绑定
+		v1.DELETE("relationship", relationship.CoupleUnbound)          //情侣关系解绑
 	}
 }
